--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "angular2": "2.0.0-beta.13",
+    "angular2": "^2.0.0-beta.15",
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "feathers": "^2.0.0",
@@ -8,13 +8,13 @@
     "feathers-hooks": "^1.5.2",
     "feathers-localstorage": "^0.4.0",
     "feathers-rest": "^1.2.5",
-    "ionic-angular": "2.0.0-beta.4",
+    "ionic-angular": "^2.0.0-beta.4-201604170622",
     "ionic-native": "^1.1.0",
     "ionicons": "3.0.0-alpha.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "superagent": "^1.8.3",
-    "zone.js": "0.6.6"
+    "zone.js": "^0.6.11"
   },
   "devDependencies": {
     "del": "2.2.0",
