--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "test": "npm run jshint && npm run mocha",
     "jshint": "jshint src/. test/. --config",
-    "start": "node src/",
+    "start": "babel-watch src/",
     "mocha": "mocha test/ --recursive"
   },
   "dependencies": {
@@ -30,16 +30,21 @@
     "feathers-configuration": "^0.2.2",
     "feathers-errors": "^2.1.0",
     "feathers-hooks": "^1.5.2",
-    "feathers-mongoose": "^3.3.6",
+    "feathers-mongoose": "^3.3.7",
     "feathers-rest": "^1.2.5",
     "feathers-socketio": "^1.3.4",
+    "graphql-tools": "^0.3.9",
     "mongoose": "^4.4.12",
     "passport": "^0.3.2",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
   "devDependencies": {
-    "jshint": "^2.9.1",
+    "babel": "^6.5.2",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-node5": "^11.0.2",
+    "babel-watch": "^2.0.2",
+    "jshint": "^2.9.2",
     "mocha": "^2.4.5",
     "request": "^2.72.0"
   }
