--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,13 @@
     "es6-promise": "3.0.2",
     "es6-shim": "^0.35.0",
     "feathers": "^2.0.0",
-    "feathers-authentication": "^0.7.1",
+    "feathers-authentication": "^0.7.5",
     "feathers-hooks": "^1.5.2",
     "feathers-localstorage": "^0.4.0",
     "feathers-rest": "^1.2.5",
-    "ionic-angular": "^2.0.0-beta.4-201604170622",
+    "ionic-angular": "^2.0.0-beta.6",
     "ionic-native": "^1.1.0",
-    "ionicons": "3.0.0-alpha.3",
+    "ionicons": "^3.0.0",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "superagent": "^1.8.3",
@@ -24,7 +24,7 @@
     "ionic-gulp-fonts-copy": "^1.0.0",
     "ionic-gulp-html-copy": "^1.0.0",
     "ionic-gulp-sass-build": "^1.0.0",
-    "ionic-gulp-scripts-copy": "^1.0.0",
+    "ionic-gulp-scripts-copy": "^1.0.1",
     "run-sequence": "1.1.5"
   },
   "name": "client",
